--- a/synth_inventory/static/css/main.css
+++ b/synth_inventory/static/css/main.css
@@ -150,7 +150,10 @@ footer{
 }
 
 .copyright{
-    padding-bottom: 5vh;
+    padding-bottom: 15vh;
 }
 
+#login-field{
+    text-align: center;
+}
 /* #494544 the brown */
