--- a/synth_inventory/templates/base.html
+++ b/synth_inventory/templates/base.html
@@ -13,29 +13,34 @@
 <body>
     <nav class="ct-nav">
         <div class="logo">
-            <img src="../static/images/logo.png" alt="Logo">
+            <a href="{{ url_for('site.home') }}">
+                <img src="../static/images/logo.png" alt="Logo">
+            </a>
             <h2>Patch Place</h2>
         </div>
         <div>
             <ul id="horizontal-list">
-                <a href="">
+                <a href="{{ url_for('site.home') }}">
                     <li>Synth Preset Vault</li>
                 </a>
                 <a href="">
                     <li>Donate</li>
                 </a>
-                <a href="">
+                {% if current_user.is_authenticated %}
+                <a href="{{ url_for('site.profile') }}">
                     <li>Profile</li>
                 </a>
-                <a href="">
+                <a href="{{ url_for('auth.logout') }}">
                     <li>Log Out</li>
                 </a>
+                {% else %}
                 <a href="{{ url_for('auth.signin') }}">
                     <li>Sign In</li>
                 </a>
                 <a href="{{ url_for('auth.signup') }}">
                     <li>Sign Up Free</li>
                 </a>
+                {% endif %}
             </ul>
         </div>
     </nav>
@@ -54,10 +59,10 @@
             <a href="">
                 <li>Location</li>
             </a>
-            <a href="">
+            <a href="https://github.com/Blazaca/week-5-day-1">
                 <li>Github Repo</li>
             </a>
-            <a href="">
+            <a href="https://blazaca.github.io/pages-portfolio/ ">
                 <li>Porfolio</li>
             </a>
             <a href="">
